# windows-edif

./: .gitignore  .gitmodules  README  README.md
Extensions/: AutoInstall.bat  README.md
Extensions/Template/: .gitignore  Actions.cpp  BuildSettings.vsprops  CMakeLists.txt  Common.h  Conditions.cpp  CustomParams.cpp  Debugger.cpp  EditData.hpp  Edittime.cpp  Expressions.cpp  Ext.def  Ext.json  Ext.rc  Extension.cpp  Extension.h  Extension.hpp  General.cpp  Properties.cpp  Resource.h  Runtime.cpp  Template.sln  Template.vcproj  Template2015.sln  Template2015.vcxproj  Template2015.vcxproj.filters  Text.cpp  TextProps.cpp  resource.h
Extensions/TemplatePlus/: CMakeLists.txt  Common.h  Edittime.cpp  Expressions.cpp  Ext.def  Properties.cpp  Template.sln  Template.vcproj  Template2015.sln  Template2015.vcxproj
Extensions/TemplatePlusPlus/: Actions.cpp  Common.h  EditData.hpp  Edittime.cpp  Ext.json  Extension.hpp  General.cpp  Properties.cpp  Runtime.cpp  Template.sln  Template.vcproj
Inc/: Ccxhdr.h  CfcFile.h  Cncf.h  Cncy.h  Cnpdll.h  EDStream.hpp  Edif.h  FilterMgr.h  ImageFlt.h  ImgFlt.h  JSON.h  MinGW.hpp  Mvt.h  ObjectSelection.h  Patch.h  Props.h  Surface.h  cncr.h  json.h
Lib/: Edif.Edittime.cpp  Edif.General.cpp  Edif.Runtime.cpp  Edif.cpp  JSON.cpp  ObjectSelection.cpp  json.c  mmfs2.0hwa.lib
